--- a/yelp_clone/app/views/restaurants/index.html.erb
+++ b/yelp_clone/app/views/restaurants/index.html.erb
@@ -10,12 +10,11 @@
   <body>
     <% if @restaurants.any? %>
       <% @restaurants.each do |restaurant| %>
-        <h2><%= restaurant.name %></h2>
+        <h2><%= link_to restaurant.name, restaurant_path(restaurant) %></h2>
       <% end %>
     <% else %>
       <h1>No restaurants have been added</h1>
       <a href='/restaurants/new'>Add a restaurant</a>
     <% end %>
-
   </body>
 </html>
