--- a/yelp_clone/app/views/restaurants/index.html.erb
+++ b/yelp_clone/app/views/restaurants/index.html.erb
@@ -14,6 +14,19 @@
         <h3><%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %> </h3>
         <h3><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %></h3>
         <h3><%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
+
+        <h3>Reviews for <%= restaurant.name %>
+        <% if restaurant.reviews.any? %>
+          <ul>
+            <% restaurant.reviews.each do |review| %>
+              <li>
+                <%= review.thoughts %>, <strong><%= review.rating %></strong>/5
+              </li>
+            <% end %>
+          </ul>
+        <% else %>
+          <p>No reviews available</p>
+        <% end %>
       <% end %>
     <% else %>
       <h1>No restaurants have been added</h1>
