--- a/yelp_clone/app/views/restaurants/new.html.erb
+++ b/yelp_clone/app/views/restaurants/new.html.erb
@@ -4,7 +4,18 @@
     <title>New</title>
   </head>
   <body>
-    <%=form_for @restaurant do |f| %>
+    <% if @restaurant.errors.any? %>
+      <section id='errors'>
+        <h2> <%= pluralize(@restaurant.errors.count, "errors") %> prohibited this restaurant from being saved: </h2>
+        <ul>
+          <% @restaurant.errors.full_messages.each do |message| %>
+            <li><%= message %> </li>
+          <% end %>
+        </ul>
+      </section>
+    <% end %>
+
+    <%= form_for @restaurant do |f| %>
       <%= f.label :name %>
       <%= f.text_field :name %>
       <%= f.submit %>
