--- a/yelp_clone/app/views/restaurants/show.html.erb
+++ b/yelp_clone/app/views/restaurants/show.html.erb
@@ -7,6 +7,17 @@
   <body>
     <p><%= @restaurant.name %></p>
     <p><%= @restaurant.description %></p>
+    <% if @restaurant.reviews.any? %>
+      <ul>
+        <% @restaurant.reviews.each do |review| %>
+          <li>
+            <%= review.thoughts %>, <strong><%= review.rating %></strong>/5
+          </li>
+        <% end %>
+      </ul>
+    <% else %>
+      <p>No reviews available</p>
+    <% end %>
   </body>
 
 </html>
