Assert userlogin before CRUDDING, TDD'd

--- a/yelp_clone/app/views/restaurants/index.html.erb
+++ b/yelp_clone/app/views/restaurants/index.html.erb
@@ -11,10 +11,11 @@
     <% if @restaurants.any? %>
       <% @restaurants.each do |restaurant| %>
         <h2><%= link_to restaurant.name, restaurant_path(restaurant) %></h2>
-        <h3><%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %> </h3>
-        <h3><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %></h3>
+        <% if current_user && current_user.restaurants.exists?(id: restaurant.id) %>
+          <h3><%= link_to "Edit #{restaurant.name}", edit_restaurant_path(restaurant) %> </h3>
+          <h3><%= link_to "Delete #{restaurant.name}", restaurant_path(restaurant), method: :delete %></h3>
+        <% end %>
         <h3><%= link_to "Review #{restaurant.name}", new_restaurant_review_path(restaurant) %>
-
         <h3>Reviews for <%= restaurant.name %>
         <% if restaurant.reviews.any? %>
           <ul>
