--- a/yelp_clone/app/views/layouts/application.html.erb
+++ b/yelp_clone/app/views/layouts/application.html.erb
@@ -8,26 +8,9 @@
 </head>
 <body>
 
-  <!--
-  <script>
-    window.fbAsyncInit = function() {
-      FB.init({
-        appId      : '1561061900873072',
-        xfbml      : true,
-        version    : 'v2.5'
-      });
-    };
-
-    (function(d, s, id){
-       var js, fjs = d.getElementsByTagName(s)[0];
-       if (d.getElementById(id)) {return;}
-       js = d.createElement(s); js.id = id;
-       js.src = "//connect.facebook.net/en_US/sdk.js";
-       fjs.parentNode.insertBefore(js, fjs);
-     }(document, 'script', 'facebook-jssdk'));
-  </script> -->
 
 <% if user_signed_in? %>
+  <%= link_to 'Add restaurant', new_restaurant_path %>
   <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
 <% else %>
   <%= link_to "Sign in", new_user_session_path %>
